--- a/css/estilos.css
+++ b/css/estilos.css
@@ -220,12 +220,22 @@ nav ul li a
 	font-size: 18px;
 	font-weight: normal;
 	font-family: 'Rambla', sans-serif;
+	transition:.4s all;
+}
+.usoletra:hover
+{
+	transform:scale(1,1.2);
+	-webkit-transform:scale(1.1,1.25);
+	-ms-transform:scale(1.1,1.25);
+	-moz-transform:scale(1.1,1.25);
+	box-shadow: 0 5px 5px black;
 }
 .preguntas p
 {
 	font-weight: normal;
 	font-size: 16px;
 	font-family: 'Rambla', sans-serif;
+	transition:.4s all;
 }
 .rota
 {
@@ -238,7 +248,14 @@ nav ul li a
 	height: 32px;
 	display: none;
 }
+.benefis
+{	
+	color: black;
+	width: 45%;
+	margin: 0 auto;
+	background: rgb(16,147,182);
 
+}
 .agranda
 {
 	width: 100%;
