--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,7 +32,7 @@ header
 {
 	background:url("../img/menu.png") no-repeat 50% center;
 	background-size: 800px;
-	height: 37px;
+	height: 38px;
 	margin: 0 auto;
 }
 
@@ -62,9 +62,11 @@ nav ul li a
 	margin: 0px 1em;
 	text-decoration: none;
 }
-ul li
+.beneficios
 {
-	list-style-type: none;
+	text-align: right;
+	padding: 1em;
+	list-style-position: inside;
 }
 #buscador
 {
