--- a/css/estilos.css
+++ b/css/estilos.css
@@ -75,9 +75,8 @@ nav ul li a
 }
 #superior
 {
-	margin: 10px 20px;
-	opacity: 0.8;
 	width: 300px;
+	background:red; 
 }
 #buscador img
 {
@@ -349,6 +348,8 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	display: inline-block;
 	width: 33px;
 	height: 19px;
+	vertical-align: top;
+	margin: 9px 5px;
 }
 /***********************************************************************************************/
 .roundabout-holder 
@@ -394,7 +395,7 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	#superior
 	{
 		width: 250px;
-		margin: 10px 0px;
+		margin: 9px 5px;
 	}
 	
 	#donde,#uso,#como
