--- a/bestbus/css/estilos.css
+++ b/bestbus/css/estilos.css
@@ -1,12 +1,13 @@
-
+@import url(http://fonts.googleapis.com/css?family=Artifika);
 body
 {
-	background: rgb(255,233,186);
+	background: rgb(255,233,186) ;
 	font-family: Arial;
 	font-size: 16px;
 	margin: 0 auto;
 	padding: 0;
 	text-align: center;
+	font-family: 'Artifika', serif;
 }
 
 footer
@@ -14,7 +15,8 @@ footer
 	background: rgb(181,181,181);
 	height: 50px;
 	color: black;
-	min-width: 320px;
+	width: 100%;
+	min-width: 280px;
 	padding-top: 25px;
 }
 h5{
@@ -23,23 +25,26 @@ h5{
 }
 header
 {
-	background:center,rgba(255,186,2,.9);
+	background:url(../img/logo.png)no-repeat 7% center,rgba(255,186,2,.9);
 	box-shadow: 0px 0px 25px black inset;
 	box-shadow: 0 5px 20px black;
-	background-size: 40%;
+	background-size: 150px;
 	height: 60px;
 	top: 0px;
 	position: fixed;
 	left: 0;
 	width: 100%;
+	min-width: 280px;
 
 }
 header h1
 {
-	font-size: 1em;
-	margin: 10px 0% 10px 33%;
-	width: 70%;
-	overflow: hidden;
+	font-weight: bold;
+	font-size: .7em;
+	margin: 10px 0 10px 50%;
+	padding-right: 9px;
+	width: 50%;
+	text-shadow:0 2px 3px black;
 }
 nav 
 {
@@ -52,18 +57,18 @@ nav ul
 }
 nav ul li
 {
+	background: gray;
 	list-style-type: none;
 	border: 1px solid black;
 	box-shadow: 0 0 15px black;
-
+	padding: 5px 0px;
 }
 
 nav ul li a
 {
 	padding: 5px 0;
 	color: white;
-	display: block;
-	background: gray;
+	width: 100%;
 	text-decoration: none;
 }
 
@@ -75,6 +80,7 @@ nav ul li a
 {
 	background: rgb(252,189,19);
 	width: 100%;
+	min-width: 280px;
 }
 
 .contenido p,h2
@@ -87,13 +93,9 @@ nav ul li a
 	text-align: left;
 }
 
-@media screen and (min-width: 600px)
+@media screen and (min-width: 500px)
 {
 
-	header
-	{
-		background-size: 25%;
-	}
 	.contenido
 	{
 		width: 80%;
@@ -101,18 +103,21 @@ nav ul li a
 	}
 	nav ul li
 	{
+		width: 15%;
 		display: inline-block;
-		width: 17%;
+		margin: 0 auto;
 	}
+	header h1
+	{
+		font-size: 1.1em;
+		margin: 16px auto;
+		width: 70%;
+	}
+
 }
 
 @media screen and (min-width: 1000px)
 {
-	
-	header
-	{
-		background-size: 20%;
-	}
 	.contenido
 	{
 		width: 60%;
