--- a/bestbus/css/estilos.css
+++ b/bestbus/css/estilos.css
@@ -25,27 +25,20 @@ h5{
 }
 header
 {
-	background:url(../img/logo.png)no-repeat 7% center,rgba(255,186,2,.9);
+	background:rgb(255,186,2);
 	box-shadow: 0px 0px 25px black inset;
 	box-shadow: 0 5px 20px black;
-	background-size: 150px;
 	height: 60px;
 	top: 0px;
 	position: fixed;
 	left: 0;
 	width: 100%;
-	min-width: 280px;
-
 }
 header h1
 {
-	font-weight: bold;
-	font-size: .7em;
-	margin: 10px 0 10px 50%;
-	padding-right: 9px;
-	width: 50%;
-	text-shadow:0 2px 3px black;
+	font-size: 24px;
 }
+
 nav 
 {
 	margin-top: 65px;
@@ -106,12 +99,6 @@ nav ul li a
 		width: 15%;
 		display: inline-block;
 		margin: 0 auto;
-	}
-	header h1
-	{
-		font-size: 1.1em;
-		margin: 16px auto;
-		width: 70%;
 	}
 
 }
