--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,12 +36,17 @@ header
 	margin: 0 auto;
 }
 
-h2 
+.bene
 {
-	margin: 8px 0px;
+	margin: 0px;
 	padding: 0px;
+	color: rgb(16,147,182);
+	font-size: 24px;
 }
-
+#precios
+{
+	width: 50%;
+}
 nav ul
 {
 	margin: 0px;
@@ -67,6 +72,8 @@ nav ul li a
 	text-align: right;
 	padding: 1em;
 	list-style-position: inside;
+	color: yellow;
+	font-size: 1.5em;
 }
 #buscador
 {
@@ -136,6 +143,16 @@ nav ul li a
 	width: 250px;
 	padding:0px;
 }
+#monedas
+{
+	transition:.3s all;
+	-webkit-transition:.3s all;
+}
+#monedas:hover
+{
+	transform:scale(1.1,1.1);
+	-webkit-transform:scale(1.1,1.1);
+}
 #precio
 {
 	width: 60%;
@@ -156,7 +173,7 @@ nav ul li a
 	color: black;
 	padding:0px;
 	width: 60%;
-	margin: 40px auto;
+	margin: 0px auto;
 	text-align: left;
 	display: inline-block;
 	vertical-align: top;
@@ -190,9 +207,11 @@ nav ul li a
 .preguntas p
 {
 	font-weight: normal;
-	font-size: 16px;
+	font-size: 18px;
 	font-family: 'Rambla', sans-serif;
+	padding: 0 1em;
 	transition:.4s all;
+	-webkit-transition:.4s all;
 }
 .rota
 {
@@ -207,15 +226,14 @@ nav ul li a
 }
 .benefis
 {	
-	color: black;
 	width: 60%;
-	margin: 60px auto 5px auto;
+	margin: 7px auto 0px auto;
 	background: rgb(16,147,182);	
 }
 .benefis p
 {
 	text-align: left; 
-	padding: 1em;
+	padding: .5em 1em;
 	color: white;
 	font-family: font-family: 'Rambla', sans-serif;
 }
@@ -223,7 +241,11 @@ nav ul li a
 {
 	width: 100%;
 }
-
+.comodonde
+{
+	margin: 0;
+	padding: 0;
+}
 .contact_form h2 {
     background: rgba(165,243,254,0.6);
     border-radius: 5px;
@@ -350,7 +372,6 @@ box-shadow: 0 0 10px 5px #00fffc inset;
  .roundabout-in-focus .rota
  {
       display: block;
-      font-size: 1em;
  }
  /***********************************************************************************************/
 
@@ -382,7 +403,7 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	 }
 	.roundabout-moveable-item img
 	{
-		width:60%;
+		width:70%;
 	}
 	.roundabout-moveable-item 
 	{
@@ -425,7 +446,8 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 
 	.preguntas
 	{
-		width: 90%;
+		width: 100%;
+		margin: 0;
 	}
 	#nombre,#email,#mensaje
 	{
@@ -441,12 +463,11 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	{
     	width:100%;
 	}
-	.benefis
+	.benefis 
 	{
-		width: 90%;
-		margin: 30px auto 50px auto;
-		border: 1px solid black;
+		width: 100%;
 	}
+
 }
 
 @media screen and (max-width: 400px)
@@ -469,11 +490,11 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	}
 	header nav ul li
 	{
-		border: 1px solid black;
-		margin: .3px;	
-		background: background: rgb(16,147,182);
-		padding: 7px;	
-		width: 94%;
+		margin: 0px;
+		background:rgb(16,147,182);
+		border: 1px solid white;
+		padding: 10px 0px;	
+		width: 100%;
 	}
 	header nav ul li a
 	{
@@ -509,10 +530,6 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	{
 		width: 90%;
 	}
-	.preguntas2 img
-	{
-		width: 50%;
-	}
 	#superior
 	{
 		width: 120px;
@@ -532,6 +549,34 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 		padding:0;
 		color: rgb(16,147,182);
 		font-size: 24px;
+	}
+	.benefis 
+	{
+		width: 100%;
+		margin: 22px 0 0 0;
+		font-size: 18px;
+	}
+	.preguntas
+	{
+		
+		margin: 25px 0 0 0;
+	}
+	.roundabout-moveable-item 
+	{
+		width: 250px;
+	 }
+	 .roundabout-moveable-item img
+	{
+		width:90%;
+		border-radius: 10px;
+	}
+	#monedas
+	{
+		width: 90%;
+	}
+	#precios
+	{
+		width: 90%;
 	}
 }
 
