--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,19 @@
 @import url(http://fonts.googleapis.com/css?family=Nova+Square);
 @import url(http://fonts.googleapis.com/css?family=Bad+Script);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
+@font-face {
+	font-family: "Flaticon";
+	src: url("flaticon.eot");
+	src: url("flaticon.eot#iefix") format("embedded-opentype"),
+	url("flaticon.woff") format("woff"),
+	url("flaticon.ttf") format("truetype"),
+	url("flaticon.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+.flaticon-question:before {
+	content: "\e002";
+}
 body
 {
 	background:url("../img/fondo.png") repeat-x;
@@ -261,6 +273,10 @@ nav ul li a
     margin: 0 auto;
 
 }
+#monedas
+	{
+		width: 10%;
+	}
 /*--- estilos para los ul y li del formulario ---*/
 .contact_form ul {
     width:40%;
@@ -576,7 +592,7 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	}
 	#monedas
 	{
-		width: 90%;
+		width: 30%;
 	}
 	#precios
 	{
