--- a/css/estilos.css
+++ b/css/estilos.css
@@ -562,7 +562,6 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	}
 	.preguntas
 	{
-		
 		margin: 25px 0 0 0;
 	}
 	.roundabout-moveable-item 
@@ -571,8 +570,10 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	 }
 	 .roundabout-moveable-item img
 	{
-		width:90%;
+		width:100%;
 		border-radius: 10px;
+		margin: 0;
+		padding: 0;
 	}
 	#monedas
 	{
