--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -1,6 +1,27 @@
 body
 {
-	background: red;
+	background: #ffc631;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 16px;
+}
+footer
+{
+	background: gray;
+	height: 75px;
+	text-align: center;
+}
+h2
+{
+	background: #c08b00;
+	font-size: 36px;
+	text-align: center;
+	margin: 0;
+	padding: 13px 0px;
+}
+.uno
+{
+	margin: 63px 0 0 0;
 }
 header
 {
@@ -11,7 +32,51 @@ header
 	left: 0;
 	width: 100%;
 }
+header p
+{
+	float: right;
+	margin-right: 20px;
+	text-decoration: underline;
+}
 header img
 {
-	position: relative;
+	position: absolute;
+	left: 0;
+}
+.cuadrotexto
+{
+	font-size: 18px;
+	margin: 0;
+	padding: 0 13px;
+	text-align: left;
+}
+#autobus img
+{
+	width: 90%;
+	-webkit-transition:.5s all;
+}
+#autobus img:hover
+{
+	transform:scale(.5,.5);
+	-webkit-transform:scale(.5,.5);
+}
+#autobus
+{
+	font-size: 24px;
+	color: red;
+	padding:0 13px;
+}
+@media screen and (min-width: 480px)
+{
+	.cuadrotexto,#autobus
+	{
+		background: red;
+	}
+}
+@media screen and (min-width: 768px)
+{
+	.cuadrotexto,#autobus
+	{
+		background: blue;
+	}
 }
