--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -1,9 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 body
 {
 	background: #ffc631;
 	margin: 0 auto;
+	padding:0;
 	text-align: center;
 	font-size: 16px;
+	font-family: 'Varela Round', sans-serif;
 }
 footer
 {
@@ -13,15 +16,11 @@ footer
 }
 h2
 {
-	background: #c08b00;
+	background: #fb6a13;
 	font-size: 36px;
 	text-align: center;
 	margin: 0;
 	padding: 13px 0px;
-}
-.uno
-{
-	margin: 63px 0 0 0;
 }
 header
 {
@@ -41,46 +40,95 @@ header p
 header img
 {
 	position: absolute;
-	left: 0;
+	right: 40%;
 }
-.cuadrotexto
+.cuadro
 {
 	font-size: 18px;
 	margin: 0;
-	padding: 0 13px;
-	text-align: left;
+	padding: 0;
+
+}
+#uno
+{
+	margin: 63px 0 0 0;
 }
 #autobus img
 {
-	width: 90%;
+	width:100%;
 	-webkit-transition:.5s all;
 }
-#autobus img:hover
+#galeria img
 {
-	transform:scale(.5,.5);
-	-webkit-transform:scale(.5,.5);
+	width: 100%;
 }
 #autobus
 {
 	font-size: 24px;
 	color: red;
-	padding:0 13px;
+	padding:8px;
+	margin: 0;
+	text-align: center;
+}
+.parrafo
+{
+	padding: 8px;
+	margin: 0;
+}
+.parrafo img
+{
+	display: none;	
+}
+.cuadro .cliente
+{	
+	border: 1px solid black;
+	margin: 10px;
+	height: 200px;
+	width: 95%;
 }
 @media screen and (min-width: 480px)
 {
-	.cuadrotexto,#autobus
-	{
-		background: red;
-	}
 	#autobus img
 	{
-		width: 10%;
+		width: 30%;
+	}
+	.cuadro .cliente
+	{
+		display: inline-block;
+		width: 20%;
+	}
+	.cliente
+	{
+		background: rgba(185,25,95,0.5);
+		margin: 0;
 	}
 }
 @media screen and (min-width: 768px)
 {
-	.cuadrotexto,#autobus
+	.parrafo img
 	{
-		background: blue;
+		display: block;
+		margin: 0 auto;
+	}
+
+	#autobus,.parrafo
+	{
+		display: inline-block;
+		vertical-align: top;
+		margin: 0 auto;
+	}
+	#autobus img
+	{
+		width:100%;
+	}
+	#galeria img
+	{
+		width: 70%;
+	}
+	.parrafo
+	{
+		width:37%;
+		margin: 0 auto;
+		background: rgba(255,255,255,0.3)
 	}
 }
