--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -24,7 +24,7 @@ h2
 }
 header
 {
-	background: white;
+	background: #b61c20;
 	height: 63px;
 	top: 0px;
 	position: fixed;
@@ -41,6 +41,30 @@ header img
 {
 	position: absolute;
 	right: 40%;
+	box-shadow: 0 0 30px gray;
+}
+nav ul
+{
+	margin: 0;
+	padding:0;
+}
+ul li
+{
+	list-style-type: none;
+	margin: 0 auto;
+	padding:20px 0;
+	width: 100%;
+}
+li input, textarea
+{
+	width: 80%;
+}
+.submit
+{
+	background:red;
+	border: none;
+	border-radius: 15px;
+	padding: 13px 20px;
 }
 .cuadro
 {
@@ -51,12 +75,29 @@ header img
 }
 #uno
 {
+	height:160px;
+	background: url("../img/bus2.jpg")no-repeat;
+	background-size: 100%;
 	margin: 63px 0 0 0;
+	width: 100%;
+}
+#uno h1
+{
+	padding-top: 13px;
+}
+.mas
+{
+	text-align: center;
+	font-size: 24px;
 }
 #autobus img
 {
 	width:100%;
 	-webkit-transition:.5s all;
+}
+#galeria
+{
+	background:#157d9d;
 }
 #galeria img
 {
@@ -79,6 +120,11 @@ header img
 {
 	display: none;	
 }
+.cliente
+{
+	background: url("../img/empresas.jpg")no-repeat;
+	background-size: 100%;
+}
 .cuadro .cliente
 {	
 	border: 1px solid black;
@@ -86,6 +132,7 @@ header img
 	height: 200px;
 	width: 95%;
 }
+
 @media screen and (min-width: 480px)
 {
 	#autobus img
@@ -95,12 +142,15 @@ header img
 	.cuadro .cliente
 	{
 		display: inline-block;
-		width: 20%;
+		width: 30%;
 	}
-	.cliente
+	#uno
 	{
-		background: rgba(185,25,95,0.5);
-		margin: 0;
+		height: 300px;
+	}
+	li input, textarea
+	{
+		width: 50%;
 	}
 }
 @media screen and (min-width: 768px)
@@ -130,5 +180,14 @@ header img
 		width:37%;
 		margin: 0 auto;
 		background: rgba(255,255,255,0.3)
+	}
+	.cuadro .cliente
+	{
+		display: inline-block;
+		width: 20%;
+	}
+	#uno
+	{
+		height: 600px;
 	}
 }
