--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -79,6 +79,21 @@ ul li
 	padding: 0;
 
 }
+
+.rslides 
+{
+	font-size: 20px;
+	color: red;
+	text-align: center;
+	position: absolute;
+}
+#uno figcaption
+{
+	background:black;
+	position: absolute;
+	top: 10%;
+	left: 20%;
+}
 #uno
 {
 	height:auto;
