--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -24,7 +24,7 @@ h2
 }
 header
 {
-	background: #b61c20;
+	background: white;
 	height: 63px;
 	top: 0px;
 	position: fixed;
@@ -40,7 +40,7 @@ header p
 header img
 {
 	position: absolute;
-	right: 40%;
+	right: 45%;
 	box-shadow: 0 0 30px gray;
 }
 ul
@@ -217,7 +217,7 @@ ul li
   list-style: none;
   overflow: hidden;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1600px;
   padding: 0;
   margin: 0 auto;
   }
