--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
+
 body
 {
 	background: #ffc631;
@@ -41,7 +42,6 @@ header img
 {
 	position: absolute;
 	right: 45%;
-	box-shadow: 0 0 30px gray;
 }
 ul
 {
@@ -89,7 +89,7 @@ ul li
 }
 #uno figcaption
 {
-	background:black;
+	font-size: 28px;
 	position: absolute;
 	top: 10%;
 	left: 20%;
@@ -122,6 +122,10 @@ ul li
 {
 	width: 100%;
 }
+.galeria img
+{
+	width: 100%;
+}
 #autobus
 {
 	font-size: 24px;
@@ -142,14 +146,14 @@ ul li
 .cliente
 {
 	background: url("../img/empresas.jpg")no-repeat;
-	background-size: 100%;
+	background-size: 80%;
+	background-position: center;
 }
 .cuadro .cliente
 {	
-	border: 1px solid black;
 	margin: 10px;
 	height: 200px;
-	width: 95%;
+	width: 90%;
 }
 
 @media screen and (min-width: 480px)
@@ -208,16 +212,18 @@ ul li
 		list-style-type: none;
 		margin-top: 20px;
 	}
+	.galeria img
+	{
+		max-width: 70%;
+	}
 }
-
-
 
 .rslides {
   position: relative;
   list-style: none;
   overflow: hidden;
   width: 100%;
-  max-width: 1600px;
+  max-width: 1200px;
   padding: 0;
   margin: 0 auto;
   }
