--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -14,6 +14,7 @@ footer
 	background: gray;
 	height: 75px;
 	text-align: center;
+	padding-top: 23px;
 }
 h2
 {
@@ -63,6 +64,17 @@ li input, textarea
 ul li
 {
 	margin-top: 13px;
+}
+#menu ul li
+{
+	list-style-type: none;
+	display: inline-block;
+	vertical-align: top;
+	padding: 0 15px;
+}
+#menu ul li a
+{
+	text-decoration: none;
 }
 .submit
 {
@@ -173,6 +185,11 @@ ul li
 	li input, textarea
 	{
 		width: 50%;
+	}
+	.cliente
+	{
+		width: 100%;
+		background-size: 100%;
 	}
 }
 @media screen and (min-width: 768px)
