--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
 @import url(http://fonts.googleapis.com/css?family=Codystar);
+@import url(http://fonts.googleapis.com/css?family=Lobster);
 body
 {
 	background: #ffc631;
@@ -42,7 +43,7 @@ header p
 header img
 {
 	position: absolute;
-	right: 45%;
+
 }
 ul
 {
@@ -65,20 +66,28 @@ ul li
 {
 	margin-top: 13px;
 }
+header img
+{
+	display: none;
+}
 #menu ul li
 {
 	list-style-type: none;
 	display: inline-block;
 	vertical-align: top;
-	padding: 0 0px;
+	color: black;
 }
-#menu ul li:hover
+#menu ul li a:hover
 {
-	background-color: red;
+	background-color: gray;
 }
 #menu ul li a
 {
 	text-decoration: none;
+	color: black;
+	font-size: 14px;
+	padding: 25px 0px;
+	font-weight: bold;
 }
 .submit
 {
@@ -105,10 +114,10 @@ ul li
 }
 #uno figcaption
 {
-	font-size: 40px;
+	font-size: 26px;
 	color: #862829;
-	font-family: 'Codystar', cursive;
-	background: gray;
+	font-family: 'Lobster', cursive;
+	text-shadow: 5px 5px 7px #ff0000;
 	position: absolute;
 	top: 5%;
 	left: 5%;
@@ -195,6 +204,10 @@ ul li
 		width: 100%;
 		background-size: 100%;
 	}
+	#menu li
+	{
+		padding: 0 15px
+	}
 }
 @media screen and (min-width: 768px)
 {
@@ -239,6 +252,10 @@ ul li
 	.galeria img
 	{
 		max-width: 70%;
+	}
+	header img
+	{
+		display: block;
 	}
 }
 
