--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -170,6 +170,13 @@ iframe
 .galeria img
 {
 	width: 100%;
+	transition:.5s all;
+	-webkit-transition:.5s all;
+}
+.galeria img:hover
+{
+	transform:scale(1.1,1.1);
+	-webkit-transform:scale(1.1,1.1);
 }
 #autobus
 {
@@ -219,6 +226,21 @@ iframe
 	width: 50px;
 	padding: 0 10px;
 	color: red;
+}
+
+.contact_form p
+{
+	color: red;
+	width: auto;
+	transition:.5s all;
+	-webkit-transition:.5s all;
+}
+.contact_form p:hover
+{
+	transform:scale(1.3,1.3);
+	-webkit-transform:scale(1.3,1.3);
+	text-shadow:0px 2px 2px gray;
+
 }
 @media screen and (min-width: 480px)
 {
