--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -236,10 +236,17 @@ iframe
 
 .contact_form p
 {
+	font-size: 18px;
 	color: red;
 	width: auto;
 	transition:.5s all;
 	-webkit-transition:.5s all;
+}
+.contact_form h3
+{
+	width: 90%;
+	margin:0 auto;
+	max-width: 700px;
 }
 .contact_form p:hover
 {
@@ -335,6 +342,10 @@ iframe
 		width: 60%;
 		max-width: 600px;
 		height: 300px;
+	}
+	.contact_form h3
+	{
+		width: 60%;
 	}
 }
 
