--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -42,6 +42,7 @@ header
 	position: fixed;
 	left: 0;
 	width: 100%;
+	z-index: 5;
 }
 header p
 {
@@ -96,13 +97,14 @@ iframe
 #menu ul li a:hover
 {
 	background-color: gray;
+	height: 100%
 }
 #menu ul li a
 {
 	text-decoration: none;
 	color: black;
 	font-size: 14px;
-	padding: 25px 0px;
+	padding: 30px 0px;
 	font-weight: bold;
 }
 .submit
