--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -86,6 +86,8 @@ iframe
 	height: 200px;
 	box-shadow: 0px 0px 20px black;
 	border-radius: 30px;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
 }
 #menu ul li
 {
