--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -55,7 +55,7 @@ header p
 header img
 {
 	position: absolute;
-
+	z-index: -5;
 }
 ul
 {
@@ -295,10 +295,6 @@ iframe
 	{
 		padding: 0 5px;
 	}
-	#menu
-	{
-		float: right;
-	}
 	#uno figcaption
 	{
 		font-size: 40px;
@@ -306,6 +302,14 @@ iframe
 }
 @media screen and (min-width: 768px)
 {
+	#menu li
+	{
+		padding: 0 30px;
+	}
+	#menu
+	{
+		margin-right: 10%;
+	}
 	.parrafo img
 	{
 		display: block;
