--- a/00/css/estilos.css
+++ b/00/css/estilos.css
@@ -1,6 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Varela+Round);
-@import url(http://fonts.googleapis.com/css?family=Codystar);
 @import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(http://fonts.googleapis.com/css?family=Raleway);
 body
 {
 	background: #ffc631;
@@ -8,7 +7,7 @@ body
 	padding:0;
 	text-align: center;
 	font-size: 16px;
-	font-family: 'Varela Round', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 footer
 {
