Tipos de tarjetas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -252,6 +252,11 @@ nav ul li a
 	margin: 7px auto 0px auto;
 	background: rgb(16,147,182);	
 }
+.lastarjetas img
+{
+	width: 50%;
+	padding: 15px 0;
+}
 .benefis p
 {
 	text-align: left; 
@@ -262,6 +267,15 @@ nav ul li a
 	display: inline-block;
 	vertical-align: top;
 	background: rgba(255,255,255,0.1);
+	margin-bottom: 0;
+}
+.benefis li
+{
+	background: rgba(255,255,255,0.1);
+	max-width: 100%;
+	margin: 0 auto;
+	width:60%;
+	padding-top: 0;
 }
 .agranda
 {
@@ -514,6 +528,11 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 	{
 		width: 40%;
 	}
+	
+	.lastarjetas img
+	{
+		width: 50%;
+	}
 
 }
 
@@ -631,6 +650,10 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 		width: 90%;
 	}
 	.benefis p
+	{
+		width: 90%;
+	}
+	.lastarjetas img
 	{
 		width: 90%;
 	}
