--- a/css/estilos.css
+++ b/css/estilos.css
@@ -277,6 +277,11 @@ nav ul li a
 	width:60%;
 	padding-top: 0;
 }
+.beneficios li
+{
+	width:100%;
+	background: rgba(255,1,1,0.5)
+}
 .agranda
 {
 	width: 100%;
@@ -575,7 +580,6 @@ box-shadow: 0 0 10px 5px #00fffc inset;
 		height: 0px;
 		display: none;
 		height: auto;
-
 	}
 	#otro
 	{
