--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,8 +93,9 @@ nav ul li a
 	height:400px;
 	margin-top: 10px;
 	margin: 0 auto;
+	max-width: 1200px;
 	width: 70%;
-	z-index: -15;
+	
 }
 #general
 {
@@ -105,6 +106,8 @@ nav ul li a
 #cuatro
 {
 	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 #tarjetas
 {
@@ -193,6 +196,7 @@ nav ul li a
 	color: black;
 	padding:0px;
 	width: 60%;
+	max-width: 900px;
 	margin: 0px auto;
 	text-align: left;
 	display: inline-block;
@@ -247,9 +251,10 @@ nav ul li a
 }
 .benefis
 {	
-	width: 60%;
+	background: rgb(16,147,182);
 	margin: 7px auto 0px auto;
-	background: rgb(16,147,182);	
+	max-width: 900px;
+	width: 60%;	
 }
 .lastarjetas img
 {
@@ -262,7 +267,7 @@ nav ul li a
 	padding: .5em 1em;
 	color: white;
 	font-family: 'Open Sans', sans-serif;
-	width: 40%;
+	width: 50%;
 	display: inline-block;
 	vertical-align: top;
 	background: rgba(255,255,255,0.1);
@@ -273,8 +278,13 @@ nav ul li a
 	background: rgba(255,255,255,0.1);
 	max-width: 100%;
 	margin: 0 auto;
-	width:60%;
+	width: 80%;
 	padding-top: 0;
+	
+}
+.benefis li:active
+{
+	display: none;
 }
 .beneficios li
 {
